glibc (2.3.5-13) UNRELEASED; urgency=low

  [ Clint Adams ]
  * Acknowledge NMU.  (Closes: #342545)

 -- Clint Adams <schizo@debian.org>  Wed,  1 Feb 2006 20:52:13 -0500

glibc (2.3.5-12.1) unstable; urgency=low

  * NMU
  * glibc235-hppa-fpu.diff: New, fixes hppa FPU issues.  Closes: #342545

 -- LaMont Jones <lamont@bld-4.mmjgroup.com>  Wed,  1 Feb 2006 09:47:57 -0700

glibc (2.3.5-12) unstable; urgency=low

  * debian/patches/glibc235-nis-netgrp.diff: New file to fix assertion
    failures with NIS.  (Closes: #322011)
  * Switch to quilt to handle Debian patches.
    - debian/control.in/main: add Build-Depends: quilt.
    - Replace debian/rules.d/dpatch.mk by debian/rules.d/quilt.mk.
    - Rename debian/patches/*.dpatch into debian/patches/*.diff.
    - Move localedata patches into debian/patches/localedata/
  * debian/patches/localedata/cvs-localedata.diff: Update to latest CVS.
    Among other changes:
    - locales/mn_MN: Fix date_fmt.  (Closes: #328831)
    - locales/de_DE: Add transliterations for quoting characters.
      (Closes: #235759)
    - locales/ss_ZA locales/tn_ZA locales/ve_ZA locales/nso_ZA
      locales/ts_ZA: New files.  (Closes: #254417)
    - locales/km_KH: New file.  (Closes: #334762)
    - locales/mg_MG: New file.  (Closes: #271549)
    - locales/sr_CS: New file.  (Closes: #254993)
  * debian/patches/locale-iso4217.diff: Update to latest CVS.
    This includes changes from glibc235-localedata-sr_CS.diff, which
    is no more needed.
  * debian/patches/locale-iso639.diff: New file.
  * debian/patches/locale-ku_TR.diff: New file, to provide a Kurdish
    locale needed by d-i.  This locale comes from upstream CVS, and has
    been updated to the latest patch sent to BZ870.
  * debian/patches/localedata/locale-eo_EO.diff: Apply minor updates to
    this locale file.  Add eo and eo.UTF-8 to SUPPORTED.  (Closes: #233308)
  * Import collation fixes and enhancements for localedef from
    belocs-locales-bin.