@@ -3,7 +3,11 @@ glibc (2.3.5-13) UNRELEASED; urgency=low
   [ Clint Adams ]
   * Acknowledge NMU.  (Closes: #342545)
 
- -- Clint Adams <schizo@debian.org>  Wed,  1 Feb 2006 20:52:13 -0500
+  [ Denis Barbier ]
+  * debian/rules.d/control.mk: Make sure that debian/control is regenerated.
+    (Closes: #351704)
+
+ -- Denis Barbier <barbier@debian.org>  Mon,  6 Feb 2006 22:22:23 +0100
 
 glibc (2.3.5-12.1) unstable; urgency=low
 
